fixed navbar going off screen

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav {
     display: block;
     margin: 8px 22px 8px 22px;
     overflow: hidden;
-    width: 100%;
+    width: auto;
     padding: 0;
 }
 .right {
